--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "catalog.js",
   "scripts": {
     "preversion": "npm test",
-    "test": "mocha tests.js"
+    "test": "node tests.js"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,5 @@
   "bugs": {
     "url": "https://github.com/victorherraiz/xcatalog/issues"
   },
-  "homepage": "https://github.com/victorherraiz/xcatalog#readme",
-  "devDependencies": {
-    "chai": "^3.4.1",
-    "mocha": "^2.3.4"
-  }
+  "homepage": "https://github.com/victorherraiz/xcatalog#readme"
 }
