--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "type": "git",
     "url": "git+https://github.com/victorherraiz/xcatalog.git"
   },
+  "engines" : {
+    "node" : ">=4.0.0"
+  },
   "keywords": [
     "di",
     "dependency",
